--- a/website/src/content/docs/docs/howtos/Generate client libraries/05pagingOperations.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/05pagingOperations.mdx
@@ -50,7 +50,18 @@ public virtual Pageable<User> ListWithPage(CancellationToken cancellationToken =
 ```
 
 ```typescript
-// TODO
+// Modular api layer
+export function listWithPage(
+  context: Client,
+  options: ListWithPageOptionalParams = { requestOptions: {} }
+): PagedAsyncIterableIterator<User>;
+
+// Modular classical client layer
+export class TestServiceClient {
+  listWithPage(
+    options: ListWithPageOptionalParams = { requestOptions: {} }
+  ): PagedAsyncIterableIterator<__PLACEHOLDER_o44__>;
+}
 ```
 
 ```java
@@ -95,7 +106,18 @@ public virtual Pageable<User> ListWithPage(CancellationToken cancellationToken =
 ```
 
 ```typescript
-// TODO
+// Modular api layer
+export function listWithPage(
+  context: Client,
+  options: ListWithPageOptionalParams = { requestOptions: {} }
+): PagedAsyncIterableIterator<User>;
+
+// Modular classical client layer
+export class TestServiceClient {
+  listWithPage(
+    options: ListWithPageOptionalParams = { requestOptions: {} }
+  ): PagedAsyncIterableIterator<__PLACEHOLDER_o44__>;
+}
 ```
 
 ```java
@@ -146,7 +168,18 @@ def list_with_page(self, **kwargs: Any) -> Iterable["_models.User"]:
 ```
 
 ```typescript
-// TODO
+// Modular api layer
+export function listWithPage(
+  context: Client,
+  options: ListWithPageOptionalParams = { requestOptions: {} }
+): PagedAsyncIterableIterator<User>;
+
+// Modular classical client layer
+export class TestServiceClient {
+  listWithPage(
+    options: ListWithPageOptionalParams = { requestOptions: {} }
+  ): PagedAsyncIterableIterator<__PLACEHOLDER_o44__>;
+}
 ```
 
 ```java
@@ -235,7 +268,18 @@ def list_with_page(self, **kwargs: Any) -> Iterable["_models.User"]:
 ```
 
 ```typescript
-// TODO
+// Modular api layer
+export function listWithPage(
+  context: Client,
+  options: ListWithPageOptionalParams = { requestOptions: {} }
+): PagedAsyncIterableIterator<User>;
+
+// Modular classical client layer
+export class TestServiceClient {
+  listWithPage(
+    options: ListWithPageOptionalParams = { requestOptions: {} }
+  ): PagedAsyncIterableIterator<__PLACEHOLDER_o44__>;
+}
 ```
 
 ```java
@@ -279,7 +323,18 @@ def list_with_page(self, **kwargs: Any) -> Iterable["_models.User"]:
 ```
 
 ```typescript
-// TODO
+// Modular api layer
+export function listWithPage(
+  context: Client,
+  options: ListWithPageOptionalParams = { requestOptions: {} }
+): PagedAsyncIterableIterator<User>;
+
+// Modular classical client layer
+export class TestServiceClient {
+  listWithPage(
+    options: ListWithPageOptionalParams = { requestOptions: {} }
+  ): PagedAsyncIterableIterator<__PLACEHOLDER_o44__>;
+}
 ```
 
 ```java
