--- a/website/src/content/docs/docs/howtos/Generate client libraries/00howtogen.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/00howtogen.mdx
@@ -12,8 +12,8 @@ The best documentation on how to generate can be found using those links:
 - https://aka.ms/azsdk/dpcodegen/python
 - https://aka.ms/azsdk/dpcodegen/java
 - https://aka.ms/azsdk/rlc/js
-- https://aka.ms/azsdk/dpcodegen/go
-- https://aka.ms/azsdk/dpcodegen/js (do not use unless told to do so by the archboard)
+- https://aka.ms/azsdk/dpcodegen/js
+- https://aka.ms/azsdk/dpcodegen/go (do not use unless told to do so by the archboard)
 
 At a glance, add your emitter name to your `package.json`, along with the right options in the `tspconfig.yaml`.
 
