--- a/website/src/content/docs/docs/howtos/Generate client libraries/07multipart.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/07multipart.mdx
@@ -66,4 +66,16 @@ public final class MultipartRequest {
 public void upload(MultipartRequest body);
 ```
 
+```go
+type MultipartRequest struct {
+    ID                string
+    Address           Address
+    ProfileImage      *os.File
+    PreviousAddresses []Address
+    Pictures          []*os.File
+}
+
+func (c *Client) Upload(ctx context.Context, req MultipartRequest, options *UploadOptions) (UploadResponse, error)
+```
+
 </ClientTabs>
